# qrew

./: .api-release-versioning-manifest.json  .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  docker-compose.observability.yml  docker-compose.yml  justfile  main.py  package-lock.json  package.json  pyproject.toml  release-please-config.json  ruff.toml
api/: .dockerignore  .env.example  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  alembic.ini  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 393549af2f17_2026_04_05_create_users_table.py  3abe87e2c49f_2026_05_08_add_kyc_fields_and_passkey_credentials.py  3abe87e2c49f_add_kyc_fields_and_passkey_credentials_.py  6ec4ff49f815_2026_06_13_add_postgres_schemas.py  6f9d4a5d9ce4_add_devices_table.py  7a8b9c0d1e2f_2026_05_26_add_device_id_to_sessions.py  8b9c0d1e2f3a_2026_05_26_add_last_asserted_at_to_sessions.py  9c0d1e2f3a4b_2026_05_26_add_scanners_table.py  a0b1c2d3e4f5_2026_06_11_add_scanner_last_refreshed.py  a1b2c3d4e5f6_2026_05_17_add_last_used_at_name_and_cascade_to_passkey_credentials.py  a1b2c3d4e5f6_add_last_used_at_name_and_cascade_to_passkey_credentials.py  a4b5c6d7e8f9_2026_06_09_add_event_queue_columns.py  a5b6c7d8e9f0_2026_05_24_add_device_fingerprints_table.py  a8b9c0d1e2f3_2026_06_02_add_outbox_table.py  ad1e2f3a4b5c_2026_05_26_add_deleted_at_to_users.py  b2c3d4e5f6a7_2026_05_17_add_is_admin_to_users.py  b2c3d4e5f6a7_add_is_admin_to_users.py  b5c6d7e8f9a0_2026_06_09_add_reservation_risk_columns.py  b9c0d1e2f3a4_2026_06_08_add_organisations_and_members.py  bd2e3f4a5b6c_2026_05_26_add_attestation_to_devices.py  c0d1e2f3a4b5_2026_06_08_add_venues_table.py  c1d2e3f4a5b6_2026_05_20_add_audit_events_table.py  c4d5e6f7a8b9_2026_05_29_encrypt_user_pii_columns.py  c6d7e8f9a0b1_2026_06_09_add_payments_table.py  d1e2f3a4b5c6_2026_06_08_add_events_table.py  d2e3f4a5b6c7_2026_05_24_add_sessions_table.py  d5e6f7a8b9c0_2026_06_01_add_kyc_document_object_key.py  d7e8f9a0b1c2_2026_06_09_add_ticket_fsm_guard.py  e2f3a4b5c6d7_2026_06_08_add_ticket_types_table.py  e3f4a5b6c7d8_2026_05_24_add_pending_email_to_users.py  e6f7a8b9c0d1_2026_06_02_add_notifications_table.py  e8f9a0b1c2d3_2026_06_10_add_ticket_bound_device.py  eab10f45b3a7_2026_05_24_add_national_id_number_and_.py  f3a4b5c6d7e8_2026_06_09_add_reservations_and_tickets.py  f4a5b6c7d8e9_2026_05_24_add_pending_phone_to_users.py  f7a8b9c0d1e2_2026_06_02_add_events_search_vector.py  f9a0b1c2d3e4_2026_06_10_add_outbox_dlq_reason.py
api/http/: index.html
api/tests/: conftest.py
api/tests/v1/: __init__.py  conftest.py  health_test.py
api/tests/v1/admin/: conftest.py
api/tests/v1/api/: errors_test.py  openapi_test.py  page_test.py  probes_test.py
api/tests/v1/auth/: conftest.py  refresh_test.py  register_test.py  verify_email_test.py  verify_phone_test.py
api/tests/v1/entry/: stats_test.py  validate_test.py
api/tests/v1/event/: service_test.py
api/tests/v1/fraud/: engine_test.py
api/tests/v1/idempotency/: fingerprint_test.py  middleware_test.py  store_test.py
api/tests/v1/jobs/: context_test.py  cron_test.py  propagation_test.py  registry_test.py  worker_loads_test.py
api/tests/v1/locking/: lock_test.py
api/tests/v1/notification/: channels_test.py  service_test.py  templates_test.py
api/tests/v1/observability/: log_correlation_test.py  propagation_test.py  traced_test.py
api/tests/v1/organisation/: acl_test.py  service_test.py
api/tests/v1/outbox/: dlq_test.py  sweeper_test.py
api/tests/v1/payment/: refund_test.py  service_test.py
api/tests/v1/public_catalog/: router_test.py
api/tests/v1/queue/: core_test.py
api/tests/v1/ratelimit/: conftest.py  decorator_test.py  limiter_test.py
api/tests/v1/reservation/: service_test.py
api/tests/v1/scanner/: refresh_test.py
api/tests/v1/search/: queries_test.py  router_test.py  tsvector_test.py
api/tests/v1/storage/: local_test.py  service_test.py  signing_test.py
api/tests/v1/ticket/: restore_test.py  transition_test.py
api/tests/v1/ticket_qr/: gate_test.py
api/tests/v1/ticket_type/: service_test.py
api/tests/v1/venue/: service_test.py
api/tests/v1/ws/: auth_test.py  connection_test.py  hub_test.py  reaper_test.py  registry_test.py
apps/api/gateway/: Dockerfile  README.md  pyproject.toml
apps/api/services/entry/: Dockerfile  pyproject.toml
apps/api/services/identity/: Dockerfile  pyproject.toml
apps/api/services/sales/: Dockerfile  README.md  pyproject.toml
apps/api/services/ticketing/: Dockerfile  pyproject.toml
gateway/: Dockerfile  README.md  pyproject.toml
gateway/config/: local.yaml.example
gateway/tests/integration/: conftest.py
gateway/tests/integration/routers/: ws_test.py
gateway/tests/unit/hub/: connection_test.py
services/audit/: Dockerfile  pyproject.toml
services/audit/alembic/: env.py
services/audit/alembic/versions/: 0001_2026_06_14_init_audit_schema.py
services/audit/config/: local.yaml.example
services/audit/migrations/: env.py
services/audit/migrations/versions/: 0001_2026_06_14_init_audit_schema.py
services/catalog/: .env.example  Dockerfile  README.md  pyproject.toml
services/catalog/alembic/: env.py
services/catalog/config/: local.yaml.example
services/catalog/migrations/: env.py
services/catalog/tests/: conftest.py
services/entry/: .env.example  Dockerfile  README.md  pyproject.toml
services/entry/config/: local.yaml.example
services/entry/migrations/: env.py
services/entry/tests/: conftest.py
services/gateway/: Dockerfile  pyproject.toml
services/identity/: Dockerfile  README.md  pyproject.toml
services/identity/alembic/: env.py
services/identity/migrations/: env.py
services/sales/: Dockerfile  alembic.ini  pyproject.toml
services/sales/alembic/: env.py
services/sales/migrations/: env.py
services/ticketing/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
services/ticketing/alembic/: env.py
services/ticketing/config/: local.yaml.example
services/ticketing/migrations/: env.py
services/ticketing/tests/: conftest.py
(+1798 files in other folders)
