[project]
name = "qrew-workspace"
version = "0.1.0"
description = "Qrew monorepo."
requires-python = ">=3.12"
dependencies = [
    "cryptography>=46.0.5",
    "opencv-python-headless>=4.8",
    "pillow>=12.2.0",
    "pytesseract>=0.3.13",
]

[tool.uv.workspace]
members = [
  "services/audit",
  "services/entry",
  "services/gateway",
  "services/payments",
  "services/catalog",
  "services/ticketing",
  "services/sales",
  "services/identity",
  "packages/broker",
  "packages/contracts",
  "packages/db",
  "packages/locking",
  "packages/middleware",
  "packages/observability",
  "packages/pagination",
  "packages/idempotency",
  "packages/jobs",
  "packages/security",
  "packages/ratelimit",
  "packages/outbox",
  "packages/audit-publisher",
  "packages/http-errors",
  "packages/probes",
  "packages/worker",
]

[dependency-groups]
dev = [
    "ruff>=0.4",
]
