# ── Build ─────────────────────────────────────────────────────────────────────

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Project ───────────────────────────────────────────────────────────────────

[project]
name = "api"
version = "1.11.0"
description = "qrew API service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "PyJWT[crypto]>=2.8",
    "passlib[bcrypt,argon2]>=1.7",
    "bcrypt>=3.2,<4.0",
    "argon2-cffi>=23.1",
    "slowapi>=0.1.9",
    "structlog>=24.1",
    "email-validator>=2.2",
    "httpx>=0.27",
    "aiosmtplib>=3.0",
    "phonenumbers>=8.13",
    "mailchecker>=4.1",
    "zxcvbn>=4.4",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-api>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "arq>=0.26",
    "webauthn>=2.0",
    "python-multipart>=0.0.9",
    "pytesseract>=0.3",
    "pillow>=10.0",
    "opencv-python-headless>=4.8",
    "cryptography>=42.0",
    "geoip2>=5.2.0",
    "stripe>=15.2.0",
    "nats-py>=2.7",
    "common",
]

[project.scripts]
dev = "com.qode.qrew.v1.service.__main__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "coverage[toml]>=7",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "pyright>=1.1",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "fakeredis[lua]>=2.20",
    "httpx2>=2.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/com"]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff.lint.per-file-ignores]
"src/com/qode/qrew/v1/service/core/search/tsvector.py" = ["S608"]
"src/com/qode/qrew/v1/service/routers/search.py" = ["S608"]

# ── Pyright ───────────────────────────────────────────────────────────────────

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src", "tests"]
extraPaths = ["../packages/common/src"]
venvPath = ".."
venv = ".venv"
reportMissingTypeStubs = false

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "../packages/common/src"]
python_files = ["*_test.py"]
markers = [
    "integration: mark test as integration test requiring Docker services (Postgres + Redis)",
]
addopts = [
    "--tb=short",
    "--strict-markers",
    "--no-header",
]
filterwarnings = [
    "ignore::DeprecationWarning:passlib",
]

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0
