[project]
name = "audit"
version = "0.1.0"
description = "qrew audit microservice (Merkle chain event projection)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "structlog>=24.0",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "nats-py>=2.6",
    "common",
]

[tool.uv.sources]
common = { workspace = true }

[project.scripts]
dev = "com.qode.qrew.v1.audit.__main__:main"
worker = "com.qode.qrew.v1.audit.worker.__main__:main"

[tool.uv]
venvPath = "../.."
venv = ".venv"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
extraPaths = ["../../packages/common/src"]

[tool.ruff]
line-length = 100
