[project]
name = "audit"
version = "0.1.0"
description = "Qrew audit service."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "slowapi>=0.1",
    "structlog>=24.0",
    "nats-py>=2.6",
    "broker",
    "idempotency",
    "locking",
    "middleware",
    "observability",
    "http-errors",
    "audit-publisher",
    "worker",
]

[tool.uv.sources]
broker = { workspace = true }
idempotency = { workspace = true }
locking = { workspace = true }
middleware = { workspace = true }
observability = { workspace = true }
http-errors = { workspace = true }
audit-publisher = { workspace = true }
worker = { workspace = true }

[project.scripts]
dev = "com.qode.qrew.v1.audit.__main__:main"
worker = "com.qode.qrew.v1.audit.worker.__main__:main"

[tool.uv]
venvPath = "../.."
venv = ".venv"

[tool.pyright]
reportMissingTypeStubs = false
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
extraPaths = ["../../packages/broker/src", "../../packages/idempotency/src", "../../packages/locking/src", "../../packages/middleware/src", "../../packages/observability/src"]

[tool.ruff]
line-length = 100
