[project]
name = "audit"
version = "0.1.0"
description = "Qrew audit service."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "slowapi>=0.1",
    "structlog>=24.0",
    "nats-py>=2.6",
    "exceptions",
    "idempotency",
    "middleware",
    "locking",
    "observability",
    "worker",
    "auditor",
]

[tool.uv.sources]
exceptions = { workspace = true }
idempotency = { workspace = true }
middleware = { workspace = true }
locking = { workspace = true }
observability = { workspace = true }
worker = { workspace = true }
auditor = { workspace = true }

[project.scripts]
dev = "com.qode.qrew.v1.audit.__main__:main"
worker = "com.qode.qrew.v1.audit.worker.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.uv]
venvPath = "../.."
venv = ".venv"

[tool.pyright]
reportMissingTypeStubs = false
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
extraPaths = ["../../packages/shared-python/exceptions/src", "../../packages/shared-python/idempotency/src", "../../packages/shared-python/middleware/src", "../../packages/shared-python/locking/src", "../../packages/shared-python/observability/src", "../../packages/shared-python/worker/src", "../../packages/auditor/src", "../../packages/contracts/src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["*_test.py"]
addopts = ["--tb=short", "--strict-markers", "--no-header"]

[tool.ruff]
line-length = 100
