[project]
name = "catalog"
version = "0.1.0"
description = "qrew catalog service (organisations, venues, events, ticket types, search)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "PyJWT>=2.8",
    "slowapi>=0.1",
    "structlog>=24.0",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-exporter-otlp-proto-http>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "httpx>=0.27",
    "cryptography>=42",
    "nats-py>=2.6",
    "arq>=0.25",
    "common",
]

[tool.uv.sources]
common = { workspace = true }

[project.scripts]
dev = "com.qode.qrew.v1.catalog.__main__:main"
worker = "com.qode.qrew.v1.catalog.worker.__main__:main"

[tool.uv]
venvPath = "../.."
venv = ".venv"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
extraPaths = ["../../packages/common/src"]

[tool.ruff]
line-length = 100
