[project]
name = "catalog"
version = "0.1.0"
description = "Qrew catalog service."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "PyJWT>=2.8",
    "slowapi>=0.1",
    "structlog>=24.0",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "cryptography>=42",
    "nats-py>=2.6",
    "arq>=0.25",
    "broker",
    "contracts",
    "db",
    "locking",
    "middleware",
    "observability",
    "pagination",
    "idempotency",
    "jobs",
    "http-errors",
    "probes",
]

[tool.uv.sources]
broker = { workspace = true }
contracts = { workspace = true }
db = { workspace = true }
locking = { workspace = true }
middleware = { workspace = true }
observability = { workspace = true }
pagination = { workspace = true }
idempotency = { workspace = true }
jobs = { workspace = true }
http-errors = { workspace = true }
probes = { workspace = true }

[project.scripts]
dev = "com.qode.qrew.v1.catalog.__main__:main"
worker = "com.qode.qrew.v1.catalog.worker.__main__:main"

[tool.uv]
venvPath = "../.."
venv = ".venv"

[tool.pyright]
reportMissingTypeStubs = false
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
extraPaths = ["../../packages/broker/src", "../../packages/contracts/src", "../../packages/db/src", "../../packages/locking/src", "../../packages/middleware/src", "../../packages/observability/src", "../../packages/pagination/src", "../../packages/idempotency/src", "../../packages/jobs/src"]

[tool.ruff]
line-length = 100
