[project]
name = "catalog"
version = "0.1.0"
description = "Qrew catalog service."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "PyJWT>=2.8",
    "slowapi>=0.1",
    "structlog>=24.0",
    "opentelemetry-api>=1.24",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.45b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.45b0",
    "cryptography>=42",
    "nats-py>=2.6",
    "arq>=0.25",
    "exceptions",
    "idempotency",
    "middleware",
    "observability",
    "db",
    "jobs",
    "locking",
    "messaging",
    "pagination",
    "contracts",
]

[tool.uv.sources]
exceptions = { workspace = true }
idempotency = { workspace = true }
middleware = { workspace = true }
observability = { workspace = true }
db = { workspace = true }
jobs = { workspace = true }
locking = { workspace = true }
messaging = { workspace = true }
pagination = { workspace = true }
contracts = { workspace = true }

[project.scripts]
dev = "com.qode.qrew.v1.catalog.__main__:main"
worker = "com.qode.qrew.v1.catalog.worker.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pyright>=1.1",
    "ruff>=0.4",
]

[tool.uv]
venvPath = "../.."
venv = ".venv"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "tests", "../../packages/shared-python/exceptions/src", "../../packages/shared-python/idempotency/src", "../../packages/shared-python/middleware/src", "../../packages/shared-python/observability/src", "../../packages/shared-python/db/src", "../../packages/shared-python/jobs/src", "../../packages/shared-python/locking/src", "../../packages/shared-python/messaging/src", "../../packages/shared-python/pagination/src", "../../packages/contracts/src"]
python_files = ["*_test.py"]
addopts = ["--tb=short", "--strict-markers", "--no-header"]

[tool.pyright]
reportMissingTypeStubs = false
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
extraPaths = ["../../packages/shared-python/exceptions/src", "../../packages/shared-python/idempotency/src", "../../packages/shared-python/middleware/src", "../../packages/shared-python/observability/src", "../../packages/shared-python/db/src", "../../packages/shared-python/jobs/src", "../../packages/shared-python/locking/src", "../../packages/shared-python/messaging/src", "../../packages/shared-python/pagination/src", "../../packages/contracts/src"]

[tool.ruff]
line-length = 100
