# ── Build ─────────────────────────────────────────────────────────────────────

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ── Project ───────────────────────────────────────────────────────────────────

[project]
name = "entry"
version = "0.1.0"
description = "Qrew entry service."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "PyJWT[crypto]>=2.8",
    "slowapi>=0.1.9",
    "structlog>=24.1",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-api>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "httpx>=0.27",
    "cryptography>=42.0",
    "broker",
    "contracts",
    "db",
    "locking",
    "idempotency",
    "middleware",
    "observability",
    "http-errors",
    "probes",
    "worker",
]

[tool.uv.sources]
broker = { workspace = true }
contracts = { workspace = true }
idempotency = { workspace = true }
db = { workspace = true }
locking = { workspace = true }
middleware = { workspace = true }
observability = { workspace = true }
http-errors = { workspace = true }
probes = { workspace = true }
worker = { workspace = true }

[project.scripts]
dev = "com.qode.qrew.v1.entry.__main__:main"
worker = "com.qode.qrew.v1.entry.worker.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "coverage[toml]>=7",
    "httpx>=0.27",
    "httpx2>=2.4.0",
    "pyright>=1.1",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "fakeredis[lua]>=2.20",
]

[tool.hatch.build.targets.wheel]
packages = ["src/com"]

# ── Pyright ───────────────────────────────────────────────────────────────────

[tool.pyright]
reportMissingTypeStubs = false
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
extraPaths = ["../../packages/broker/src", "../../packages/contracts/src", "../../packages/db/src", "../../packages/idempotency/src", "../../packages/locking/src", "../../packages/middleware/src", "../../packages/observability/src", "../../packages/security/src", "../../packages/worker/src"]
venvPath = "../.."
venv = ".venv"

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "../../packages/broker/src", "../../packages/contracts/src", "../../packages/db/src", "../../packages/locking/src", "../../packages/middleware/src", "../../packages/observability/src", "../../packages/security/src"]
python_files = ["*_test.py"]
addopts = ["--tb=short", "--strict-markers", "--no-header"]

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/__main__.py"]
