[project]
name = "identity"
version = "0.1.0"
description = "qrew identity service (auth, registration, session, passkey, device, KYC)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "PyJWT[crypto]>=2.8",
    "passlib[bcrypt,argon2]>=1.7",
    "bcrypt>=3.2,<4.0",
    "argon2-cffi>=23.1",
    "slowapi>=0.1.9",
    "structlog>=24.1",
    "email-validator>=2.2",
    "httpx>=0.27",
    "aiosmtplib>=3.0",
    "phonenumbers>=8.13",
    "mailchecker>=4.1",
    "zxcvbn>=4.4",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-api>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "arq>=0.26",
    "webauthn>=2.0",
    "python-multipart>=0.0.9",
    "pytesseract>=0.3",
    "pillow>=10.0",
    "opencv-python-headless>=4.8",
    "cryptography>=42.0",
    "geoip2>=5.2.0",
    "nats-py>=2.7",
    "common",
]

[project.scripts]
dev = "com.qode.qrew.v1.identity.__main__:main"
worker = "com.qode.qrew.v1.identity.worker.__main__:main"

[tool.uv.sources]
common = { workspace = true }

[tool.uv]
venvPath = "../.."
venv = ".venv"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
extraPaths = ["../../packages/common/src"]
reportMissingTypeStubs = false

[tool.ruff]
line-length = 100
