[project]
name = "identity"
version = "0.1.0"
description = "Qrew identity service."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.4",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "redis[hiredis]>=5.0",
    "PyJWT[crypto]>=2.8",
    "passlib[bcrypt,argon2]>=1.7",
    "bcrypt>=3.2,<4.0",
    "argon2-cffi>=23.1",
    "slowapi>=0.1.9",
    "structlog>=24.1",
    "email-validator>=2.2",
    "httpx>=0.27",
    "aiosmtplib>=3.0",
    "phonenumbers>=8.13",
    "zxcvbn>=4.4",
    "opentelemetry-sdk>=1.24",
    "opentelemetry-api>=1.24",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.24",
    "arq>=0.26",
    "webauthn>=2.0",
    "python-multipart>=0.0.9",
    "pytesseract>=0.3",
    "pillow>=10.0",
    "opencv-python-headless>=4.8",
    "cryptography>=42.0",
    "geoip2>=5.2.0",
    "nats-py>=2.7",
    "broker",
    "contracts",
    "db",
    "locking",
    "middleware",
    "observability",
    "pagination",
    "idempotency",
    "ratelimit",
    "jobs",
    "http-errors",
    "probes",
    "worker",
]

[project.scripts]
dev = "com.qode.qrew.v1.identity.__main__:main"
worker = "com.qode.qrew.v1.identity.worker.__main__:main"
arq-worker = "com.qode.qrew.v1.identity.worker.arq_worker:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "coverage[toml]>=7",
    "httpx>=0.27",
    "factory-boy>=3.3",
    "pyright>=1.1",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "fakeredis[lua]>=2.20",
    "httpx2>=2.4.0",
]

[tool.uv.sources]
broker = { workspace = true }
contracts = { workspace = true }
db = { workspace = true }
locking = { workspace = true }
middleware = { workspace = true }
observability = { workspace = true }
pagination = { workspace = true }
idempotency = { workspace = true }
ratelimit = { workspace = true }
jobs = { workspace = true }
http-errors = { workspace = true }
probes = { workspace = true }
worker = { workspace = true }

[tool.uv]
venvPath = "../.."
venv = ".venv"

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
extraPaths = ["../../packages/broker/src", "../../packages/contracts/src", "../../packages/db/src", "../../packages/locking/src", "../../packages/middleware/src", "../../packages/observability/src", "../../packages/pagination/src", "../../packages/idempotency/src", "../../packages/jobs/src", "../../packages/ratelimit/src"]
reportMissingTypeStubs = false

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src", "../../packages/broker/src", "../../packages/contracts/src", "../../packages/db/src", "../../packages/locking/src", "../../packages/middleware/src", "../../packages/observability/src", "../../packages/pagination/src", "../../packages/idempotency/src", "../../packages/ratelimit/src"]
python_files = ["*_test.py"]
markers = [
    "integration: mark test as integration test requiring Docker services (Postgres + Redis)",
]
addopts = [
    "--tb=short",
    "--strict-markers",
    "--no-header",
]
filterwarnings = [
    "ignore::DeprecationWarning:passlib",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0
