
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gateway"
version = "0.1.0"
description = "Qrew gateway service."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings[yaml]>=2.0",
    "structlog>=24.0",
    "PyJWT>=2.8",
    "cryptography>=42",
    "nats-py>=2.6",
    "redis[hiredis]>=5.0",
    "slowapi>=0.1",
    "sqlalchemy[asyncio]>=2.0",
    "httpx>=0.27",
    "exceptions",
    "idempotency",
    "middleware",
    "observability",
    "security",
]

[tool.uv.sources]
exceptions = { workspace = true }
idempotency = { workspace = true }
middleware = { workspace = true }
observability = { workspace = true }
security = { workspace = true }

[project.scripts]
gateway-dev = "com.qode.qrew.v1.gateway.__main__:main"

[tool.uv]
package = true
venvPath = ".."
venv = ".venv"

[tool.pyright]
reportMissingTypeStubs = false
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src"]
extraPaths = ["../packages/shared-python/exceptions/src", "../packages/shared-python/idempotency/src", "../packages/shared-python/middleware/src", "../packages/shared-python/observability/src", "../packages/contracts/src", "../packages/shared-python/security/src"]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pyright>=1.1",
    "ruff>=0.4",
    "anyio>=4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["*_test.py"]
addopts = ["--tb=short", "--strict-markers", "--no-header"]
markers = [
    "integration: marks tests as integration tests (require running services)",
]

[tool.ruff]
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/com"]
